--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4.7</version>
+	</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
