--- a/src/main/resources/sensitiveInformationExample.yml
+++ b/src/main/resources/sensitiveInformationExample.yml
@@ -3,4 +3,5 @@ mailHost: smtp.example.com
 email: example@mail.com
 mailPassword: passwordExample
 jwtSecret: jwtSecretExample
-dataBasePassword: dataBasePasswordExample
+dataBasePasswordPostgres: passwordExample
+dataBasePasswordMySQL: passwordExample
